[gd_scene load_steps=6 format=3 uid="uid://juqhbmgk24a0"]

[ext_resource type="Script" uid="uid://b7ifndr08117t" path="res://entites/player/player.gd" id="1_p0vlq"]
[ext_resource type="PackedScene" uid="uid://bpi1unhvdh6nj" path="res://entites/player/rachel__black_heart_lovell_v_5_vrm.tscn" id="2_pbn7k"]

[sub_resource type="CapsuleMesh" id="CapsuleMesh_5q5h1"]

[sub_resource type="ConvexPolygonShape3D" id="ConvexPolygonShape3D_p0vlq"]
points = PackedVector3Array(-0.125207, -0.532801, -0.480507, 0.0227831, 0.47607, 0.498884, 0.169713, 0.559144, 0.464172, 0.231051, -0.803591, 0.320455, 0.40741, 0.651043, -0.243523, -0.482789, 0.594843, 0.0822132, -0.362868, -0.682312, 0.289697, 0.469044, -0.654529, -0.0662713, -0.127444, 0.842701, -0.338103, -0.393435, -0.683942, -0.244717, 0.438255, 0.623309, 0.200849, 0.0841477, 0.977454, 0.114795, -0.0682023, -0.976458, -0.12927, 0.20055, -0.563129, -0.451454, -0.185527, 0.595453, -0.453475, -0.273363, 0.592268, 0.407754, -0.00693649, -0.476823, 0.49966, 0.375821, -0.588614, 0.316955, 0.111579, 0.563059, -0.481177, -0.41725, 0.527866, -0.270497, -0.484546, -0.596972, -0.0665097, -0.279747, 0.908561, 0.0533361, -0.250197, -0.880712, 0.205319, 0.263647, -0.902771, -0.127394, 0.293368, 0.871526, -0.157196, 0.373412, -0.526319, -0.328246, 0.499663, 0.476641, -0.00688856, 0.0531056, 0.875001, 0.324703, -0.154543, -0.590854, 0.465879, -0.0972799, -0.782358, -0.398188, -0.387649, -0.498171, 0.31565, -0.30068, -0.587995, -0.388901)

[sub_resource type="BoxMesh" id="BoxMesh_pbn7k"]

[node name="Player" type="CharacterBody3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.00163, 0)
script = ExtResource("1_p0vlq")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.000264883, -0.840887, 0.000412107)
visible = false
mesh = SubResource("CapsuleMesh_5q5h1")

[node name="rachel__black_heart_lovell_v5vrm" parent="." instance=ExtResource("2_pbn7k")]
transform = Transform3D(-0.988433, 0, -0.151658, 0, 1, 0, 0.151658, 0, -0.988433, 0.000228643, -2.16985, 0.0962885)

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.000264883, -0.840887, 0.000412107)
shape = SubResource("ConvexPolygonShape3D_p0vlq")

[node name="CameraRig" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.000264883, -0.840887, 0.000412107)

[node name="Head" type="Node3D" parent="CameraRig"]

[node name="Camera3D" type="Camera3D" parent="CameraRig/Head"]

[node name="HandItem" type="Node3D" parent="CameraRig/Head/Camera3D"]
transform = Transform3D(0.179597, 0, 0.0100977, 0, 0.179881, 0, -0.0100977, 0, 0.179597, 0.325252, -0.363009, -0.776006)

[node name="MeshInstance3D" type="MeshInstance3D" parent="CameraRig/Head/Camera3D/HandItem"]
mesh = SubResource("BoxMesh_pbn7k")
